Bug 131707 - FILEOPEN: DOCX: Incorrect textwrap around image
Summary: FILEOPEN: DOCX: Incorrect textwrap around image
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.0.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2020-03-30 12:49 UTC by Xisco Faulí
Modified: 2020-08-21 18:18 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Comparison MSO 2010 and LibreOffice 7.0 master (550.60 KB, image/png)
2020-03-30 12:49 UTC, Xisco Faulí
Details
Comparison MSO 2010 and LibreOffice 7.0 master - file 2 (153.83 KB, image/png)
2020-03-30 15:36 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2020-03-30 12:49:56 UTC
Created attachment 159148 [details]
Comparison MSO 2010 and LibreOffice 7.0 master

Steps to reproduce:
1. Open attachment 82588 [details] from bug 67038
2. Go to page two and check the image and the text around

-> See comparison image

Reproduced in

Version: 7.0.0.0.alpha0+
Build ID: 11e6582b23b983fde4b04ece5b37c546bcd98a43
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2020-03-30 12:51:09 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=1052acae9a599c54e518c8fc17d6a994d8778757

author	Justin Luth <justin.luth@collabora.com>	2020-02-26 13:15:53 +0300
committer	Miklos Vajna <vmiklos@collabora.com>	2020-03-05 10:01:19 +0100
commit 1052acae9a599c54e518c8fc17d6a994d8778757 (patch)
tree ff5a096000cf625cb0223789afc976861d9c1424
parent bef317ec9d00beb70d6b59c2af3b61ef2544b4a5 (diff)
tdf#119748 sw layout: ConsiderTextWrap on initial positioning

Bisected with: bibisect-linux64-6.5

Adding Cc: to Justin Luth
Comment 2 Xisco Faulí 2020-03-30 15:34:51 UTC
Same issue reproduced wit attachment 94056 [details] from bug 74970
Comment 3 Xisco Faulí 2020-03-30 15:36:35 UTC
Created attachment 159154 [details]
Comparison MSO 2010 and LibreOffice 7.0 master - file 2
Comment 4 Justin L 2020-03-31 13:57:37 UTC
Using jmux's fix instead, at https://gerrit.libreoffice.org/c/core/+/91420
Comment 5 Commit Notification 2020-04-03 08:07:07 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f497d1dc27b4fee3db1e2228647a00971922eb5f

tdf#131707 sw layout try2: ConsiderTextWrap on positioning

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Xisco Faulí 2020-04-15 12:00:18 UTC
Verified in

Version: 7.0.0.0.alpha0+
Build ID: 24e1563b5db3de5abac0d4fd0f737ec319e703e8
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded

@Justin, thanks for fixing this issue!!
Comment 7 Justin L 2020-08-21 18:18:27 UTC
Jmux's version of the fix in comment 5 also triggered at least one bug report (bug 133709), so I had intended to revert it, but that was rejected. Since the current regression is minor in nature, I'll go along with it, but I won't make any attempt to fix any future fallout from this.