tdf#131707 sw layout try2: ConsiderTextWrap on positioning

rework 7.0 commit 1052acae9a599c54e518c8fc17d6a994d8778757

jmux and I were working on related bugs at the same time.
My patch happened to get committed before his. Since mine
regressed, use jmux's version instead.

This should fix tdf#119748 and tdf#123257

Change-Id: I705d9f6c4ac81216c31009948cf1c9150017bbf3